--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "ceephy-hackathon",
   "version": "1.0.0",
-  "main": "/Home/home.js",
+  "main": "/register/regist.js",
   "scripts": {
-    "start": "node /Home/home.html",
+    "start": "node /register/regist.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
