--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "jzz": "^1.8.5",
+    "mongoose": "^8.5.0",
     "parser": "^0.1.4",
     "vercel": "^32.3.0"
   },
