--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "fs": "^0.0.1-security",
     "jzz": "^1.8.5",
     "mongoose": "^8.5.0",
     "parser": "^0.1.4",
