--- a/vercel.json
+++ b/vercel.json
@@ -10,6 +10,10 @@
         {
             "src": "/(.*)",
             "dest": "home.js"
+        },
+        {
+                "rewrites": [{ "source": "/(.*)", "/Home/home.html": "/home.js" }]
+              
         }
     ]
 }
