--- a/vercel.json
+++ b/vercel.json
@@ -10,6 +10,18 @@
         {
             "src": "/(.*)",
             "dest": "home.js"
-        }
+        },
+        {
+            "rewrites": [
+              { "source": "/profile", "destination": "/html/profile.html" },
+              { "source": "/comu", "destination": "/html/comu.html" },
+              { "source": "/portfolio", "destination": "/html/portfolio.html" },
+              { "source": "/jobs", "destination": "/html/jobs.html" },
+              { "source": "/setting", "destination": "/html/setting.html" },
+              { "source": "/css/:file", "destination": "/css/:file" },
+              { "source": "/(.*)", "destination": "/html/$1" }
+            ]
+          }
     ]
+    
 }
